# industrial-programming-course

./: README.md
Akinator_mipt/: Akinator.cpp  Akinator.h  CMakeLists.txt  README.md  main.cpp  out.dot  out.txt  string_operations.cpp  test.txt  tree.cpp  tree.h
Akinator_mipt/examples/: ded.dot  group.dot
Akinator_mipt/headers/: Akinator.h  config.h  string_operations.h  tree.h  tree_dot_converter.h
Akinator_mipt/sources/: Akinator.cpp  string_operations.cpp  tree.cpp  tree_dot_converter.cpp
Derivator/: CMakeLists.txt  main.cpp  out.dot  out_initial.dot
Derivator/headers/: bohr.h  config.h  consts.h  derivator.h  tree.h  tree_dot_converter.h
Derivator/sources/: bohr.cpp  derivator.cpp  tree_dot_converter.cpp
ImmortalStack/: CMakeLists.txt  dump.cpp  dump.h  im_stack.cpp  im_stack.h  main.cpp
Int/: CMakeLists.txt  int.h  main.cpp
RecursiveDescent/: CMakeLists.txt  README.md  main.cpp
StackMachine/: CMakeLists.txt  README.md  binary.txt  codegeneration.py  config.txt  instruction_register_set.txt  main.cpp  output.txt
StackMachine/headers/: assembler.h  bohr.h  common_data.h  config.h  data.h  disassembler.h  execution_define.h  instruction.h  operations_description.h  stack_machine.h  string_operations.h  text_manager.h  todo.h
StackMachine/sources/: assembler.cpp  bohr.cpp  compile.cpp  data.cpp  execute.cpp  operations.cpp  stack_machine.cpp  string_operations.cpp  text_manager.cpp
StackMachine/tests/: quadratic.s  recursive.s
onegin/: CMakeLists.txt  boosted_poem.txt  doxyconfig  initial_poem.txt  main.cpp  poem.txt  reverse_sorted_poem.txt  sorted_poem.txt
